<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Learnterest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Ready to start!</string>
    <string name="browsecourse">Explore Courses!</string>
    <string name="forgetpass">Forgot Password</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="signin">Login</string>
    <string name="register">Signup</string>
    <string name="back">Back</string>
    <string name="foll">Follow</string>
    <string name="aboutty">Tagline in grey color</string>
    <string name="terms"><a href="http://www.redbus.in/mob/mTerms.aspx">Terms of Service</a></string>
    <string name="checkme">I agree to the</string>
    <string name="Ratings">Ratings</string>
    <string name="selecttopic">Select your interested topics</string>
    <string name="selectgen">Select Gender</string>
    <string name="selectmale">Male</string>
    <string name="selectfemale">Female</string>
    <string name="app_id">570716663057438</string>

    <string-array name="nav_drawer_items">
        <item>Profile</item>
        <item>Inbox</item>
        <item>My Courses</item>
        <item>My Favorites</item>
        <item>My Categories</item>
        <item>My Authors</item>
        <item>Billing</item>
        <item>Logout</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
    </array>

    <string name="oldpass">Current password</string>
    <string name="newpass">New password</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="username">Username</string>
    <string name="email">Email ID</string>
    <string name="password">Password</string>
    <string name="interstedin">Interested in</string>
    <string name="gender">Select Gender</string>
    <string name="avatar">Select Avatar</string>
    <string name="savechanges">Save Changes</string>
    <string name="getpassword">Get Password</string>
    <string name="category">Categories</string>
    <string name="author_name">Author Name</string>
    <string name="no_of_courses">Courses</string>
    <string name="unfollow">Unfollow</string>
    <string name="removecategory">Remove Category</string>
    <string name="course_name">Course Name</string>
    <string name="promo_Video">Promo Video</string>
    <string name="addtomyfavcat">Add Category</string>
    <string name="author_name">Author Name</string>
    <string name="Avatar">Avatar</string>
    <string name="author_edu">Education</string>
    <string name="aboutauth">About Me</string>
    <string name="follow">Follow Author</string>
    <string name="unfollow">Unfollow Author</string>
    <string name="enroll">Students Enrolled</string>
    <string name="browse">Browse Profile Picture</string>
    <string name="upload">Upload Image</string>
    <string name="signintext">Sign in with your username and password!!</string>
    <string name="signuptext">Sign up with your Email id!!</string>
    <string name="inital_Time">0 min, 0 sec</string>
    <string name="versionstring">Version No :</string>
    <string name="buildstring">Build No :</string>
    <string name="versionno">1.0</string>
    <string name="buildno">1.0.1</string>
    <string name="designdevelop">Designed and Developed by</string>
    <string name="deems">Deemsys Inc.</string>
    <string name="server_registering">server is registering!</string>
    <string name="server_registered">server_registered</string>
    <string name="server_register_error">server_register_error</string>
    <string name="server_unregistered">server_unregistered</string>
    <string name="server_unregister_error">server_unregister_error!</string>
    <string name="gcm_unregistered">gcm_unregistered</string>
    <string name="gcm_deleted">gcm_deleted</string>
    <string name="gcm_error">gcm_error</string>
    <string name="gcm_recoverable_error">gcm_recoverable_error</string>
    <string name="one">1.Use side menu icon at top or swipe right gesture to navigate between pages.</string>
    <string name="two">2.Swipe left or right to navigate between all, free and paid courses.</string>
    <string name="three">3.Click category at the top menu to get the list of category.</string>
    <string name="four">4.Use search icon at the top menu to search for courses.</string>
    <string name="five">5.To upload profile picture navigate to profile page, select picture and click upload. Press save changes to update your profile.</string>
    <string name="six">6.Navigate to Inbox page and get the messages. Mark message as important or unimportant in Inbox detail page.</string>
    <string name="seven">7.Update password in change password page.</string>
    <string name="eight">8.Get the list of enrolled courses in course detail page. Tap a course and view course details and course lectures.</string>
    <string name="nine">9.Use top button in course detail page to share your courses</string>
    <string name="ten">10.Use top corner button to add courses to your favourites.</string>
    <string name="eleven">11.Follow or unfollow author in about author page.</string>
    <string name="twelve">12.View course description in about course page.</string>
    <string name="thirteen">13.Click my favourites to get list of your favourite courses. Press and hold to remove courses from favourites list.</string>
    <string name="fourteen">14.Click my billing to get your paid bill details.</string>
    <string name="fifteen">15.Click About and follow us on twitter and like us on Facebook.</string>
    <string name="termsofuse">Terms Of Use</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="learnterest">Why Learnterest</string>
    <string name="address1">Corporate Office</string>
    <string name="address2">Deemsys Inc,</string>
    <string name="address3">800, Cross Pointe Road,	Suite A,</string>
    <string name="address4">Gahanna, OH 43230,U.S.A.</string>
    <string name="address5">614-322-9928 </string>
    <string name="address6">lmssupport@deemsysinc.com</string>
    <string name="uselearnterest">How to use Learnterest</string>

</resources>