<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                style="@style/custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/textView1"
                style="@style/custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/textView1"
                style="@style/custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/textView1"
                style="@style/custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/textView1"
                style="@style/custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/textView1"
                style="@style/custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/textView1"
                style="@style/custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/textView1"
                style="@style/custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eight" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/textView1"
                style="@style/custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nine" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/textView1"
                style="@style/custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ten" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/textView1"
                style="@style/custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eleven" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/textView1"
                style="@style/custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twelve" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/textView1"
                style="@style/custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thirteen" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/textView1"
                style="@style/custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourteen" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/textView1"
                style="@style/custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifteen" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="8dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>