<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout android:layout_width="fill_parent"
    android:layout_height="wrap_content"
      android:orientation="horizontal" >



    <TextView
        android:id="@+id/author"
        style="@style/custom_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author_name" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_height="wrap_content"
        android:text="TextView" />
</LinearLayout>
<LinearLayout android:layout_width="fill_parent"
    android:layout_height="wrap_content"
      android:orientation="horizontal" >



    <TextView
        android:id="@+id/avat"
        style="@style/custom_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Avatar" />

    <ImageView
        android:id="@+id/avatarimg"
        android:scaleType="fitXY"
        android:layout_width="100dp"
        android:layout_height="100dp"
         android:layout_marginLeft="100dp"
        android:src="@drawable/list_selector" />
    
</LinearLayout>
<LinearLayout android:layout_width="fill_parent"
    android:layout_height="wrap_content"
      android:orientation="horizontal" >



    <TextView
        android:id="@+id/authed"
        style="@style/custom_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author_edu" />

    <TextView
        android:id="@+id/authoredu"
        android:layout_width="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_height="wrap_content"
        android:text="TextView" />
</LinearLayout>
<LinearLayout android:layout_width="fill_parent"
    android:layout_height="wrap_content"
      android:orientation="horizontal" >



    <TextView
        android:id="@+id/abtauth"
        style="@style/custom_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutauth" />

    <TextView
        android:id="@+id/aboutauthor"
        android:layout_width="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_height="wrap_content"
        android:text="TextView" />
</LinearLayout>
<LinearLayout android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
      android:orientation="horizontal" >

    <Button
        android:id="@+id/unfolowfolow"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unfollow" />

</LinearLayout>
</LinearLayout>